Ich denke, ich hab jetzt endlich das Handling von SCA zusammen mit Code 3040 (weitere Daten folgen)