@@ -31,6 +31,8 @@ import org.kapott.hbci.callback.HBCICallback;
 import org.kapott.hbci.dialog.DialogContext;
 import org.kapott.hbci.dialog.DialogEvent;
 import org.kapott.hbci.dialog.HBCIDialogInit;
+import org.kapott.hbci.dialog.HBCIMessage;
+import org.kapott.hbci.dialog.HBCIMessageQueue;
 import org.kapott.hbci.exceptions.HBCI_Exception;
 import org.kapott.hbci.passport.HBCIPassportInternal;
 import org.kapott.hbci.passport.HBCIPassportList;
@@ -61,12 +63,8 @@ public final class HBCIDialog
     private String      anonSuffix;
     private String      dialogid;  /* The dialogID for this dialog (unique for each dialog) */
     private long        msgnum;    /* An automatically managed message counter. */
-    private  List<ArrayList<HBCIJobImpl>>        msgs;    /* this array contains all messages to be sent (excluding
-                                             dialogInit and dialogEnd); each element of the arrayList
-                                             is again an ArrayList, where each element is one
-                                             task (GV) to be sent with this specific message */
-    private Properties listOfGVs;    // liste aller GVs in der aktuellen msg; key ist der hbciCode des jobs,
-                                     // value ist die anzahl dieses jobs in der aktuellen msg
+    private HBCIMessageQueue queue;
+    private Properties listOfGVs = new Properties();
     private HBCIHandler parentHandler;
 
     public HBCIDialog(HBCIHandler parentHandler)
@@ -76,9 +74,8 @@ public final class HBCIDialog
         this.parentHandler=parentHandler;
         this.isAnon=((HBCIPassportInternal)parentHandler.getPassport()).isAnonymous();
         this.anonSuffix=isAnon?"Anon":"";
-        this.msgs=new ArrayList<ArrayList<HBCIJobImpl>>();
-        this.msgs.add(new ArrayList<HBCIJobImpl>());
-        this.listOfGVs=new Properties();
+        
+        this.reset();
     }
     
     public HBCIHandler getParentHandler()
@@ -111,7 +108,7 @@ public final class HBCIDialog
     
             // Dialog-Context erzeugen
             final DialogContext ctx = DialogContext.create(kernel,mainPassport);
-            ctx.setPayload(this);
+            ctx.setDialog(this);
             ctx.setAnonymous(this.isAnon);
             
             // Dialog-Initialisierung senden
@@ -154,7 +151,6 @@ public final class HBCIDialog
             }
 
             HBCIUtilsInternal.getCallback().status(mainPassport,HBCICallback.STATUS_DIALOG_INIT_DONE,new Object[] {ret,dialogid});
-            mainPassport.onDialogEvent(DialogEvent.INIT_COMPLETED,ctx);
         }
         catch (Exception e)
         {
@@ -166,161 +162,202 @@ public final class HBCIDialog
         return ret;
     }
     
+    /**
+     * Fuehrt die eigentlichen Geschaeftsvorfaelle aus.
+     * @return
+     */
     private HBCIMsgStatus[] doJobs()
     {
         HBCIUtils.log(HBCIUtilsInternal.getLocMsg("LOG_PROCESSING_JOBS"),HBCIUtils.LOG_INFO);
         
-        ArrayList<HBCIMsgStatus>        msgstatus_a=new ArrayList<HBCIMsgStatus>();
-        HBCIPassportList msgPassports=new HBCIPassportList();
+        final HBCIHandler h = this.getParentHandler();
+        final HBCIKernelImpl k = (HBCIKernelImpl) h.getKernel();
+        final HBCIPassportInternal p = (HBCIPassportInternal) h.getPassport();
         
-        HBCIKernelImpl       kernel=(HBCIKernelImpl)getParentHandler().getKernel();
-        HBCIPassportInternal mainPassport=(HBCIPassportInternal)getParentHandler().getPassport();
+        final DialogContext ctx = DialogContext.create(k,p);
+        ctx.setDialog(this);
+        ctx.setAnonymous(this.isAnon);
 
-        // durch die liste aller auszuführenden nachrichten durchloopen
-        int nof_messages=msgs.size();
-        for (int j=0;j<nof_messages;j++) {
-            // tasks ist liste aller jobs, die in dieser nachricht ausgeführt werden sollen
-            ArrayList<HBCIJobImpl>     tasks= msgs.get(j);
-            
-            // loop wird benutzt, um zu zählen, wie oft bereits "nachgehakt" wurde,
-            // falls ein bestimmter job nicht mit einem einzigen nachrichtenaustausch
-            // abgearbeitet werden konnte (z.b. abholen kontoauszüge)
-            int           loop=0;
-            HBCIMsgStatus msgstatus=new HBCIMsgStatus();
-            
-            // diese schleife loopt solange, bis alle jobs der aktuellen nachricht
-            // tatsächlich abgearbeitet wurden (also inclusive "nachhaken")
-            while (true) {
-                boolean addMsgStatus=true;
-                
-                try {
-                    HBCIUtils.log("generating custom msg #"+(j+1)+" (loop "+(loop+1)+")",
-                        HBCIUtils.LOG_DEBUG);
-                    
-                    int taskNum=0;
+        final ArrayList<HBCIMsgStatus> allStatuses = new ArrayList<HBCIMsgStatus>();
 
-                    msgPassports.clear();
-                    kernel.rawNewMsg("CustomMsg");
+        int msgCount = 0;
+        HBCIMessage msg = null;
+        
+        while (true)
+        {
+            p.onDialogEvent(DialogEvent.JOBS_CREATED,ctx);
+            msg = this.queue.poll();
+            if (msg == null)
+            {
+                HBCIUtils.log("dialog completed after " + msgCount + " messages",HBCIUtils.LOG_INFO);
+                break;
+            }
+            
+            final List<HBCIJobImpl> tasks = msg.getTasks();
+            
+            if (tasks.size() == 0)
+            {
+                HBCIUtils.log("no tasks in message #" + msgCount + ", skipping",HBCIUtils.LOG_WARN);
+                continue;
+            }
+
+            msgCount++;
+            HBCIMsgStatus msgstatus = null;
+            
+            try
+            {
+                ////////////////////////////////////////////////////////////////////
+                // Basis-Daten der Nachricht
+                final HBCIPassportList msgPassports = new HBCIPassportList();
+                HBCIUtils.log("generating msg #" + msgCount,HBCIUtils.LOG_DEBUG);
                     
-                    // durch alle jobs loopen, die eigentlich in der aktuellen
-                    // nachricht abgearbeitet werden müssten
+                k.rawNewMsg("CustomMsg");
+                k.rawSet("MsgHead.dialogid", dialogid);
+                k.rawSet("MsgHead.msgnum", this.getMsgNum());
+                k.rawSet("MsgTail.msgnum", this.getMsgNum());
+                //
+                ////////////////////////////////////////////////////////////////////
+
+                ////////////////////////////////////////////////////////////////////
+                // Jobs hinzufuegen
+                int taskNum = 0;
+                for (HBCIJobImpl task:tasks)
+                {
+                    final String name = task.getName();
+                    HBCIUtils.log("adding task " + name,HBCIUtils.LOG_DEBUG);
+                    HBCIUtilsInternal.getCallback().status(p,HBCICallback.STATUS_SEND_TASK,task);
+
+                    // Uebernimmt den aktuellen loop-Wert in die Lowlevel-Parameter
+                    task.applyOffset();
+                    task.setIdx(taskNum);
+                    
+                    // Daten des Tasks in den Kernel uebernehmen
+                    {
+                        final String header = HBCIUtilsInternal.withCounter("GV",taskNum);
+                        final Properties props = task.getLowlevelParams();
+                        for (Enumeration e = props.keys(); e.hasMoreElements();)
+                        {
+                            String key = (String) e.nextElement();
+                            k.rawSet(header + "." + key,props.getProperty(key));
+                        }
+                    }
+                    
+                    // additional passports für diesen task ermitteln und zu den passports für die aktuelle nachricht
+                    // hinzufügen; doppelgänger werden schon von  HBCIPassportList.addPassport() herausgefiltert
+                    msgPassports.addAll(task.getSignaturePassports());
+                    taskNum++;
+                }
+                //
+                ////////////////////////////////////////////////////////////////////
+                    
+                ////////////////////////////////////////////////////////////////////
+                // Nachricht an die Bank senden
+                msgstatus = k.rawDoIt(msgPassports,HBCIKernelImpl.SIGNIT,HBCIKernelImpl.CRYPTIT,HBCIKernelImpl.NEED_CRYPT);
+                this.nextMsgNum();
+                //
+                ////////////////////////////////////////////////////////////////////
+
+                ////////////////////////////////////////////////////////////////////
+                // Antworten auswerten
+                final int segnum = this.findTaskSegment(msgstatus);
+                if (segnum != 0)
+                {           
+                    // für jeden Task die entsprechenden Rückgabedaten-Klassen füllen
                     for (HBCIJobImpl task:tasks)
                     {
-                        // wenn der Task entweder noch gar nicht ausgeführt wurde
-                        // oder in der letzten Antwortnachricht ein entsprechendes
-                        // Offset angegeben wurde
-                        if (task.needsContinue(loop))
+                        try
                         {
-                            task.setContinueOffset(loop);
-                            
-                            final Properties p = task.getLowlevelParams();
-                            String header = HBCIUtilsInternal.withCounter("GV",taskNum);
-                            
-                            final String taskName = task.getName();
-                            HBCIUtils.log("adding task " + taskName,HBCIUtils.LOG_DEBUG);
-                            HBCIUtilsInternal.getCallback().status(mainPassport,HBCICallback.STATUS_SEND_TASK,task);
-                            task.setIdx(taskNum);
-                            
-                            // Daten für den Task festlegen
-                            for (Enumeration e = p.keys(); e.hasMoreElements();)
-                            {
-                                String key = (String) e.nextElement();
-                                kernel.rawSet(header + "." + key,p.getProperty(key));
-                            }
-                            
-                            // additional passports für diesen task ermitteln
-                            // und zu den passports für die aktuelle nachricht
-                            // hinzufügen;
-                            // doppelgänger werden schon von 
-                            // HBCIPassportList.addPassport() herausgefiltert
-                            msgPassports.addAll(task.getSignaturePassports());
-                            
-                            taskNum++;
+                            task.fillJobResult(msgstatus,segnum);
+                            HBCIUtilsInternal.getCallback().status(p,HBCICallback.STATUS_SEND_TASK_DONE,task);
+                        }
+                        catch (Exception e)
+                        {
+                            msgstatus.addException(e);
                         }
                     }
-                    
-                    // wenn keine jobs für die aktuelle message existieren
-                    if (taskNum == 0)
-                    {
-                        HBCIUtils.log("loop "+(loop+1)+" aborted, because there are no more tasks to be executed",HBCIUtils.LOG_DEBUG);
-                        addMsgStatus=false;
-                        break;
-                    }
-                    
-                    kernel.rawSet("MsgHead.dialogid", dialogid);
-                    kernel.rawSet("MsgHead.msgnum", this.getMsgNum());
-                    kernel.rawSet("MsgTail.msgnum", this.getMsgNum());
-                    this.nextMsgNum();
-                    
-                    // nachrichtenaustausch durchführen
-                    msgstatus = kernel.rawDoIt(msgPassports,HBCIKernelImpl.SIGNIT,HBCIKernelImpl.CRYPTIT,HBCIKernelImpl.NEED_CRYPT);
-                    final Properties result = msgstatus.getData();
-                    
-                    // searching for first segment number that belongs to the custom_msg
-                    // we look for entries like {"1","CustomMsg.MsgHead"} and so
-                    // on (this data is inserted from the HBCIKernelImpl.rawDoIt() method),
-                    // until we find the first segment containing a task
-                    int offset=0;   // this specifies, how many segments precede the first task segment
-                    for (offset=1;true;offset++) {
-                        String path = result.getProperty(Integer.toString(offset));
-                        if (path == null || path.startsWith("CustomMsg.GV"))
-                        {
-                            if (path == null)
-                            {
-                                // wenn kein entsprechendes Segment gefunden, dann offset auf 0 setzen
-                                offset = 0;
-                            }
-                            break;
-                        }
-                    }
-                    
-                    if (offset != 0)
-                    {           
-                        // für jeden Task die entsprechenden Rückgabedaten-Klassen füllen
-                        // in fillOutStore wird auch "executed" fuer den jeweiligen Task auf true gesetzt.
-                        for (HBCIJobImpl task : tasks)
-                        {
-                            if (task.needsContinue(loop))
-                            {
-                                // nur wenn der auftrag auch tatsaechlich gesendet werden musste
-                                try
-                                {
-                                    task.fillJobResult(msgstatus,offset);
-                                    HBCIUtilsInternal.getCallback().status(mainPassport,HBCICallback.STATUS_SEND_TASK_DONE,task);
-                                }
-                                catch (Exception e)
-                                {
-                                    msgstatus.addException(e);
-                                }
-                            }
-                        }
-                    }
-                    
-                    if (msgstatus.hasExceptions())
-                    {
-                        HBCIUtils.log("aborting current loop because of errors",HBCIUtils.LOG_ERR);
-                        break;
-                    }
-                    
-                    loop++;
                 }
-                catch (Exception e)
+                //
+                ////////////////////////////////////////////////////////////////////
+
+                ////////////////////////////////////////////////////////////////////
+                // Wenn wir Fehler haben, brechen wir den kompletten Dialog ab
+                if (msgstatus.hasExceptions())
                 {
+                    HBCIUtils.log("aborting current loop because of errors",HBCIUtils.LOG_ERR);
+                    break;
+                }
+                //
+                ////////////////////////////////////////////////////////////////////
+
+                ////////////////////////////////////////////////////////////////////
+                // Jobs erneut ausfuehren, falls noetig.
+                HBCIMessage newMsg = null;
+                for (HBCIJobImpl task:tasks)
+                {
+                    HBCIJobImpl redo = task.redo();
+                    if (redo != null)
+                    {
+                        // Nachricht bei Bedarf erstellen und an die Queue haengen
+                        if (newMsg == null)
+                        {
+                            newMsg = new HBCIMessage();
+                            queue.append(newMsg);
+                        }
+                        
+                        // Task hinzufuegen
+                        HBCIUtils.log("repeat task " + redo.getName(),HBCIUtils.LOG_DEBUG);
+                        newMsg.append(redo);
+                    }
+                }
+                //
+                ////////////////////////////////////////////////////////////////////
+            }
+            catch (Exception e)
+            {
+                HBCIUtils.log(e);
+                if (msgstatus != null)
                     msgstatus.addException(e);
-                }
-                finally
-                {
-                    if (addMsgStatus)
-                        msgstatus_a.add(msgstatus);
-                }
+            }
+            finally
+            {
+                if (msgstatus != null)
+                    allStatuses.add(msgstatus);
             }
         }
 
-        HBCIMsgStatus[] ret = new HBCIMsgStatus[0];
-        if (msgstatus_a.size()!=0)
-            ret=(msgstatus_a.toArray(ret));
+        return allStatuses.size() > 0 ? allStatuses.toArray(new HBCIMsgStatus[allStatuses.size()]) : new HBCIMsgStatus[0];
+    }
+    
+    /**
+     * Sucht in den Ergebnis-Daten des Kernels nach der ersten Segment-Nummer mit einem Task-Response.
+     * @param msgstatus die Ergebnis-Daten des Kernels.
+     * @return die Nummer des Segments oder -1, wenn keines gefunden wurde.
+     */
+    private int findTaskSegment(HBCIMsgStatus msgstatus)
+    {
+        final Properties result = msgstatus.getData();
+        
+        // searching for first segment number that belongs to the custom_msg
+        // we look for entries like {"1","CustomMsg.GV*"} and so on (this data is inserted from the HBCIKernelImpl.rawDoIt() method),
+        // until we find the first segment containing a task
+        int segnum = 1;
+        while (segnum < 1000) // Wir brauchen ja nicht endlos suchen
+        {
+            final String path = result.getProperty(Integer.toString(segnum));
+            
+            // Wir sind am Ende der Segmente angekommen
+            if (path == null)
+                return -1;
 
-        return ret;
+            // Wir haben ein GV-Antwort-Segment gefunden
+            if (path.startsWith("CustomMsg.GV"))
+              return segnum;
+
+            // naechstes Segment
+            segnum++;
+        }
+        
+        return -1;
     }
 
     /** @brief Processes the DialogEnd stage of an HBCIDialog (mid-level API).
@@ -390,13 +427,15 @@ public final class HBCIDialog
 
     private void reset()
     {
-        try {
+        try
+        {
             dialogid=null;
             msgnum=1;
-            msgs=new ArrayList<ArrayList<HBCIJobImpl>>();
-            msgs.add(new ArrayList<HBCIJobImpl>());
+            this.queue = new HBCIMessageQueue();
             listOfGVs.clear();
-        } catch (Exception e) {
+        }
+        catch (Exception e)
+        {
             HBCIUtils.log(e);
         }
     }
@@ -482,8 +521,7 @@ public final class HBCIDialog
             }
 
             listOfGVs.setProperty(hbciCode,Integer.toString(gv_counter));
-
-            msgs.get(msgs.size()-1).add(job);
+            this.queue.getLast().append(job);
         } catch (Exception e) {
             String msg=HBCIUtilsInternal.getLocMsg("EXCMSG_CANTADDJOB",job.getName());
             if (!HBCIUtilsInternal.ignoreError(null,"client.errors.ignoreAddJobErrors",
@@ -496,36 +534,22 @@ public final class HBCIDialog
     }
     
     /**
-     * Liefert die Liste aller Tasks.
-     * @return die Liste aller Tasks.
+     * Liefert die Nachrichten-Queue des Dialogs.
+     * @return die Nachrichten-Queue des Dialogs.
      */
-    public List<HBCIJobImpl> getAllTasks()
+    public HBCIMessageQueue getMessageQueue()
     {
-        List<HBCIJobImpl> tasks=new ArrayList<HBCIJobImpl>();
-        
-        for (ArrayList<HBCIJobImpl> l:this.msgs)
-        {
-            tasks.addAll(l);
-        }
-        return tasks;
+        return this.queue;
     }
-
+    
     /**
      * Erzeugt explizit eine neue Message.
      */
     public void newMsg()
     {
         HBCIUtils.log("starting new message",HBCIUtils.LOG_DEBUG);
-        msgs.add(new ArrayList<HBCIJobImpl>());
+        this.queue.append(new HBCIMessage());
         listOfGVs.clear();
     }
     
-    /**
-     * Liefert die Liste aller Messages mit den jeweiligen Tasks.
-     * @return die Liste aller Messages mit den jeweiligen Tasks.
-     */
-    public List<ArrayList<HBCIJobImpl>> getMessages()
-    {
-        return this.msgs;
-    }
 }
